--- a/styles.css
+++ b/styles.css
@@ -481,11 +481,15 @@ transition: color 0.3s ease-in-out;
     border: 1px solid black;
 }
 
-.things-to-do {
+.things-to-do, .plan-ahead {
     display: flex;
     flex-direction: column;
     padding: 3% 0;
     margin-top: 9%;
+}
+
+.plan-ahead {
+    margin: 0;
 }
 
 .heading {
@@ -647,7 +651,7 @@ transition: color 0.3s ease-in-out;
 
 .text-1>a {
     text-decoration: none;
-    font-size: 2.8rem;
+    font-size: 2.4rem;
     color: white;
 }
 
@@ -656,7 +660,7 @@ transition: color 0.3s ease-in-out;
 }
 
 .text-1>p {
-    font-size: 2.4rem;
+    font-size: 2rem;
     word-spacing: 0.2rem;
     color: rgba(255, 255, 255, 0.7);
 }
@@ -1488,520 +1492,163 @@ transition: color 0.3s ease-in-out;
     right: 1.5rem;
 }
 
-/* Nimesh work */
-.nimesh-container{
-    width: 100% ;
+/* Nimesh work here */
+
+.location-container {
+    width: 100%;
+    max-width: 1920px;
+    margin: 0 auto;
+}
+
+.location {
+    width: 100%;
+    padding: 2% 7%;
     display: flex;
     flex-direction: column;
-    align-items: center;
-    background-color: #ffffff;
- }
- 
- .explore{
-     font-family: Dubai,Arial, Helvetica, sans-serif;
-     font-size: 32px;
-     color: #000000;
-     width: 100%;
-     height: 32px;
-     margin-bottom: 13px;
-     margin-left: 500px;
- }
- @media screen and (max-width:650px) {
-    .explore{
-        margin-left: 250px;
-        font-size: 20px;
-    }
- }
- @media screen and (max-width:510px) {
-    .explore{
-        margin-left: 0px;
-        font-size: 20px;
-    }
- }
- .city{
-     font-family: Dubai,Arial, Helvetica, sans-serif;
-     font-size: 20px;
-     color: #505050;
-     width: 100%;
-     height: 24px;
-     margin-bottom: 40px;
-     margin-left: 500px;
-     text-align: left;
- }
- @media screen and (max-width:650px) {
-    .city{
-        margin-left: 250px;
-        font-size: 20px;
-    }
- }
- @media screen and (max-width:510px) {
-    .city{
-        margin-left: 0px;
-        font-size: 20px;
-    }
- }
- .map{
-    width: 900px;
-    height: 550px;
- }
- @media screen and (max-width:950px) {
-    .map{
-        
-        padding-left: 0px;
-        width:800px;
-    }
- }
- @media screen and (max-width:810px) {
-    .map{
-        
-        padding-left: 0px;
-        width:600px;
-    }
- }
- @media screen and (max-width:620px) {
-    .map{
-        
-        padding-left: 0px;
-        width:350px;
-    }
- }
- .locators{
-    width: 100%;
-     cursor: pointer;
-   display:grid;
-   justify-content: center;
-   grid-template-columns:300px 300px 300px;
-   grid-template-rows: 50px 50px 50px 50px 50px 50px;
-   
- }
- @media screen and (max-width:940px) {
-    .locators{
-grid-template-columns: 300px 300px;
-   grid-template-rows: 50px 50px 50px 50px 50px 50px 50px 50px 50px 50px 50px 50px; 
-    }
- }
- @media screen and (max-width:620px) {
-    .locators{
-grid-template-columns: 300px;
-   grid-template-rows: 50px 50px 50px 50px 50px 50px 50px 50px 50px 50px 50px 50px 50px 50px 50px 50px 50px 50px; 
-    }
- }
- .planahead{
-    width: 100%;
-     font-size: 32px;
-     line-height: 32px;
-     text-align: left;
-     letter-spacing: normal;
-     color: #000000;
-     display: flex;
-     justify-content: center;
-     
- }
- 
- .plan-heading{
-     width:100%;
-     height: 32px;
-     font-family:Dubai,Arial, Helvetica, sans-serif;
-     margin-left: 50px;
-     margin-bottom: 22px;
-     text-align: left;
-     align-content: flex-start;
- }
- 
- .item-1{
-     overflow: hidden;
-     border-radius: 2% 2%;
-     text-align: start;
-     font-size: 20px;
-     color: #ffffff;
-     background-color: #035e88;
-     width: 249px;
-     height: 480px;
- }
- .item-2{
-    border-radius: 2% 2%;
-     overflow: hidden;
-     width: 249px;
-     height: 480px;
-     text-align: start;
-     font-size: 20px;
-     color: #ffffff;
-     background-color: #035e88;
- 
- }
- .item-3{
-    border-radius: 2% 2%;
-     overflow: hidden;
-     width: 249px;
-     height: 480px;
-     text-align: start;
-     font-size: 20px;
-     color: #ffffff;
-     background-color: #035e88;
-     
- }
- .item-4{
-    border-radius: 2% 2%;
-     overflow: hidden;
-     width: 249px;
-     height: 480px;
-     text-align: start;
-     font-size: 20px;
-     color: #ffffff;
-     background-color: #035e88;
-     
- }
- .items {
-    width: 100%;
-     font-family: Dubai, Arial, sans-serif;
-     cursor: pointer;
-     display:flex; 
-     justify-content: center;
-     justify-content: space-between;
-     column-gap: 10px;
-     justify-content: space-evenly;
-     padding-left: 10px;
-     padding-right: 10px;
- }
- @media screen and (max-width:720px) {
-    .items{
-        flex-wrap: wrap
-    }
-    
- }
- .desc{
-    padding: 10px 10px 10px 10px;
- }
- .text-area{
-    padding-top: 20px;
- }
-
- .planahead{
-    width: 100%;
-     padding: 20px,20px,20px,20px;
- }
- .img{
-     overflow: hidden;
-     transition: all 1s ease-in-out;
-     width: 249px;
-     height: 179px;
- }
- .img:hover{
-     transform:scale(1.1);
- }
- .text{
-     font-size:20px;
-     width:239px;
-     height:226px;
-     padding: 21px,24px,86px,24px;
-  }   
- 
- 
- .line{
-     border: 2x solid #9c2677;
-     }
- .button{
-    
-     margin-left: 20px;
-     width: 150px;
-     height: 46px;
-     border: 2px solid #f5f5f5;
-     color:#ffffff;
-     background-color: #035e88;
-     font-family: Dubai, Arial, sans-serif;
-     padding: 10px 21px 10px 21px;
- }
- .button-2{
-    margin-top: 10px;
- }
- .button:hover{
-     transform: scale(1.1);
- }
- .weather{
-    width:100%; 
-    height: 100%;
-    display: flex;
-     justify-content:flex-start;
-     align-items: center; 
-     margin-left:50px;
-     height: 257px; 
-     font-family: Dubai, Arial, sans-serif;
-     background-color: #f5f5f5;
-     
-     column-gap: 20px;
-     }
-  
-     
- 
- .parameters{
-    background-color: #f5f5f5;
-    font-size: 20px;
-    width: 100%;
-    height: 100%;
-     margin-top: 90px;
-     display: flex;
-     justify-items:flex-start;
-    justify-content: space-evenly;
- 
- 
- }
- @media screen and (max-width:1115px) {
-  
-    .parameters{
-        flex-wrap: wrap;
-        margin-left: 10px;
-        
-    }
- }
- @media screen and (max-width:890px) {
-    .weather{
-    display: inline-block;
-    justify-content: left;
-    
-    }
-    .parameters{
-        width: 70%;
-        
-    }
- }
- @media screen and (max-width:390px) {
-    .weather{
-    display: inline-block;
-    margin-right: 0px;
-    
-    }
-    .parameters{
-        width: 70%;
-        
-    }
- }
- .sunrise{
-     width: 200%;
-     height: 45px;
-     padding-right: 20px;
- }
- .sunset{
-    width: 200%;
-     height: 45px;
-     padding-right: 20px;
- }
- .low{
-    width: 200%;
-     height: 45px;
-     padding-right: 20px;
- }
- .high{
-    width: 200%;
-     height: 45px;
-     padding-right: 20px;
- }
- .humidity{
-     width: 200%;
-     height: 45px;
-     padding-right: 20px;
- }
- .wind{
-     width: 200%;
-     height: 45px;
-     padding-right: 20px;
- }
- .current-weather{
-     width: 700px;
-     height: 32;
-     font-size: 26px;
- }
- .value{
-     color: #9c2677;
-     font-display:bold;
-     border: 2x solid #9c2677;
- }
- .temp{
-     margin-top: 42px;
-     margin-bottom: 10px;
- width: 135px;
- height: 75px;
- font-size: 60px;
- }
- .moon{
-     width: 120px;
-     height: 120px;
- }
- .clear{
-     line-height: 42px;
-     font-size: 28px;
-     width: 59px;
-     height: 42px;
- }
- .unit{
-     color: #035e88;
-     margin-top: 10px;
-     
- }
- .unit:hover{
-    cursor: pointer;
- }
- 
- .cel{
-     margin-right: 23px;
- }
- .cel:hover{
-    cursor: pointer;
- }
- .line{
-     border: 2x solid #9c2677;
-     height: 50px;
-     color: #9c2677;
- }
- 
- .banner{
-     width: 1300px;
-     height: 538px;
-     display: flex;
-     justify-content: center;
-     padding-right: 10px;
-     padding-left: 80px;
-    
-     }
-      
-     .buy{
-        color: #ffffff;
-        background-color: #9c2677;
-        width: 85px;
-        height:64px;
-        font-size: 16px;
-        border-radius: 2%;
-        border: 2x solid white;
-         margin: 60px 80px 60px 80px;
-    }
-     .offer{
-        width: 950px;
-        color: #ffffff;
-        margin-top: 50px;
-        margin-bottom: 50px;
-    background-color: #9c2677;
-    border-top-left-radius: 10%;
-    border-bottom-right-radius: 10%;
-    font-size: 32px;
-     }
-     .offer-text{
-     padding-left: 15px;
-     }
-      .ban-img{
-    width: 600px;
-    height: 538px;
-        
-      }
-      @media screen and (max-width:1115px) {
-        .banner{
-            padding-left: 40px;
-            width:1000px;
-            height: 638px;
-        }
-        .ban-img{
-            width: 400px;
-            height: 638px;    
-              }
-              .offer{
-                width: 400px;
-                    
-                  }
-      }
-      @media screen and (max-width:920px) {
-        .banner{
-            padding-left: 00px;
-            width:700px;
-            height: 738px;
-        }
-        .ban-img{
-            width: 700px;
-            height: 738px;    
-              }
-              .offer{
-                width: 700px;
-                    
-                  }
-      }
-      @media screen and (max-width:800px) {
-        .banner{
-            padding-left: 00px;
-            width:500px;
-            height: 738px;
-        }
-        .ban-img{
-            width: 500px;
-            height: 738px;    
-              }
-              .offer{
-                width: 500px;
-                    
-                  }
-      }
-      @media screen and (max-width:638px) {
-        .banner{
-            padding-left: 00px;
-            width:400px;
-            height: 738px;
-        }
-        .ban-img{
-            width: 400px;
-            height: 738px;    
-              }
-              .offer{
-                width: 400px;
-                    
-                  }
-      }
-      
-      @media screen and (max-width:800px) {
-        .banner{
-            padding-left: 00px;
-            width:500px;
-            height: 738px;
-        }
-        .ban-img{
-            width: 500px;
-            height: 738px;    
-              }
-              .offer{
-                width: 500px;
-                    
-                  }
-      }
-      @media screen and (max-width:535px) {
-        .banner{
-            padding-left: 00px;
-            width:300px;
-            height: 738px;
-        }
-        .ban-img{
-            width: 300px;
-            height: 738px;    
-              }
-              .offer{
-                width: 300px;
-                    
-                  }
-      }
-      @media screen and (max-width:430px) {
-        .banner{
-            padding-left: 00px;
-            width:200px;
-            height: 738px;
-        }
-        .ban-img{
-            width: 200px;
-            height: 738px;    
-              }
-              .offer{
-                width: 200px;
-                    
-                  }
-      }
-.learn{
-    margin-top: 50px;
-    color: #035e88;
-
+    gap: 2rem;
 }
+
+.location > h1 {
+    font-size: 3rem;
+}
+
+.location > p {
+    font-size: 2rem;
+    color: #00000095;
+}
+
+.map {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    padding: 1.5% 2%;
+}
+
+.map > iframe {
+    width: 100%;
+    height: 600px;
+    border-radius: 8px;
+}
+
+.pin {
+    padding: 1% 5%;
+    display: flex;
+    flex-wrap: wrap;
+    font-size: 1.8rem;
+    cursor: pointer;
+    gap: 2rem;
+    display: none;
+}
+
+@media screen and (min-width:768px) {
+    .pin {
+        display: flex;
+    }
+}
+
+.pin blockquote {
+    display: flex;
+    gap: 1rem;
+    width: 48%;
+}
+
+@media screen and (min-width:990px) {
+    .pin blockquote {
+        width: 25%;
+    }
+}
+
+@media screen and (min-width:1344px) {
+    .pin  blockquote {
+        width: 32%;
+    }
+}
+
+.pin blockquote:hover i {
+    color: #035e88;
+}
+
+.discount-offer {
+    display: flex;
+    flex-direction: column;
+    gap: -1rem;
+    position: relative;
+    padding: 0.5% 7%;
+}
+
+@media screen and (min-width:990px) {
+    .discount-offer {
+        flex-direction: row;
+    }
+}
+
+.image-7 {
+    width: 100%;
+}
+
+@media screen and (min-width:990px) {
+    .image-7 {
+        width: 50%;
+    }
+}
+
+.image-7 img {
+    width: 100%;
+    border-radius: 5px;
+}
+
+.discount-text {
+    display: flex;
+    flex-direction: column;
+    gap: 3rem;
+    background-color: #9C2677;
+    border-radius: 0 0 8rem;
+    padding: 7%;
+}
+
+@media screen and (min-width:990px) {
+    .discount-text {
+        gap: 5rem;
+        color: #fff;
+        border-radius: 10rem 0 10rem 0;
+        position: absolute;
+        top: 10%;
+        left: 45%;
+    }
+}
+
+@media screen and (min-width:991px) and (max-width:1137px) {
+    .discount-text {
+        top: 8%;
+        gap: 2.5rem;
+    }
+}
+
+.discount-text a {
+    text-decoration: none;
+    color: white;
+    font-size: 2.4rem;
+}
+
+.discount-text a:hover {
+    text-decoration: underline;
+}
+
+.discount-text p {
+    font-size: 2rem;
+    color: #ffffffc2;
+}
+
+.discount-text button {
+    background-color: transparent;
+    border: 2px solid white;
+    border-radius: 5px;
+    width: fit-content;
+    height: fit-content;
+    padding: 3%;
+    color: white;
+}
+
  /*Nimesh work ends here */
 
 /* Jeet CSS for Footer */
