--- a/Jeet-links/terms/terms-style.css
+++ b/Jeet-links/terms/terms-style.css
@@ -1,8 +1,19 @@
+* {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+}
+body {
+  font-family: Arial, Helvetica, sans-serif;
+}
 .container {
     padding-left: 15%;
     padding-right: 15%; 
     align-items: center;
     justify-content: center;
+    font-size: 2rem;
+    color: #505050;
+    background-color: #eeeeee;
     
 }
 .top-trerms {
@@ -12,13 +23,13 @@
 }
 .terms-heading {
     font-weight: 550;
-    font-size: 1.7rem;
+    font-size: 3rem;
 }
 .terms-para {
-    font-size: 0-.9rem;
+    font-size: 1.7rem;
     line-height: 1.5;
     margin-bottom: 2rem;
-    
+    color: #505050;
 
 }   
 .jump-link img {
@@ -33,14 +44,254 @@
 }
 li a {
     color: #505050;
-    font-size: .7rem;
+    font-size: 1.3rem;
+    padding-top: 2rem;
+    padding-bottom: 2rem;
  
 }
 .background-para, .Other-para, .Age-restriction, .Accessing, .Intellectual, .Disclaimer, .Dubai, .contacts p {
     color: #505050;
-    font-size: .8rem;
+    font-size: 1.4rem;
+    font-family: Arial, sans-serif
 
 }
-h3 {
-    color: #000;
+.background-para h3 {
+    color: #222020;
+    padding-top: 0.8rem;
+    padding-bottom: 0.8rem;
 }
+.for-flex {
+    padding-left: 5%;
+    padding-right: 5%; 
+   
+  }
+  .stay-container {
+    display: flex;
+    justify-content: space-between;
+    padding: 20px;
+    font-family: "Roboto Serif", serif;
+    
+  }
+    
+    .stay-updated, .download-apps {
+      display: flex;
+      flex-direction: column;
+ 
+    }
+    
+  .stay-update-heading {
+    font-weight: 600;
+    padding-top: 25px;
+    padding-bottom: 25px;
+    font-size: 2.8rem;
+
+  }
+    
+    .stay-updated p {
+      margin-bottom: 10px;
+      padding-top: 25px;
+      padding-bottom: 25px;
+        font-size: 1.9rem;
+        color: #505050;
+}
+    
+    
+    .stay-updated form {
+      display: flex;
+      flex-direction: row;
+      width: 25%;
+      gap: 1.5rem;
+      padding-bottom: 15px;
+      
+    }
+    
+    .stay-updated input[type="email"] {
+      padding: 10px;
+      border: 1px solid #ccc;
+      border-radius: 5px;
+      cursor: pointer;
+      height: 160%;
+      
+    }
+    
+    .stay-updated button {
+      padding: 10px;
+      background-color: #a8a3a5f2;
+      color: white;
+      border: none;
+      cursor: pointer;
+      border-radius: 5px;
+      height: 160%;
+     
+    }
+    
+    .download-apps .app-icons {
+      display: flex;
+      justify-content: space-between;
+      /* flex-wrap: wrap; */
+      width: 25%;
+      gap: 12rem;
+    }
+    
+    .download-apps .app-icons img {
+      width: 100px;
+    }
+    
+    .download-apps a {
+      text-decoration: none;
+      color: #bdbdbd;
+    }
+ 
+  .main-footer {
+    background-color:  #035e88;
+    padding-left: 5%;
+    padding-right: 5%;
+  }
+ .nav {
+    padding-top: 2.2rem;
+ }
+ .logo {
+     cursor: pointer;
+ 
+ }
+ 
+ .jeet-icons {
+     display: flex;
+     flex-wrap: wrap;
+     text-align: left;
+     list-style: none;
+     padding-left: 20px;
+     padding-top: 10px;
+     padding-right: 40px;
+     gap: 1.5rem;
+     align-items: bottom;
+     min-width: 3rem;
+     
+     
+ 
+  .facebook, .instagram, .trip, .twitter, .youtube {
+    color: #fff;
+   font-size: 1.8rem;
+  }
+ }
+  .footer {
+   
+    color: white;
+    padding: 20px;
+    display: flex;
+
+    justify-content: space-between;
+    flex-wrap: wrap;
+  }
+  .column{
+    padding-top: 25px;
+    padding-bottom: 25px;
+  }
+  .footer .column {
+    flex: 1;
+    min-width: 6.25rem;
+    margin: 10px;
+  }
+  .footer .column h3 {
+    /* border-bottom: 1px solid white; */
+    padding-bottom: 10px;
+    font-size: 2.2rem;
+  }
+  .footer .column ul {
+    list-style: none;
+    padding: 0;
+  }
+  .footer .column ul li {
+    margin: 10px 0;
+  }
+  .footer .column ul li a {
+    color: white;
+    text-decoration: none;
+    font-size: 1.9rem;
+  }
+  .footer .column ul li a:hover {
+    text-decoration: underline;
+  }
+ .border{
+    padding: 19px 25px;
+    position: relative;
+    border-top: 1px solid hsla(0, 0%, 100%, .2);
+    overflow: hidden;
+ }
+  @media screen and (max-width: 1000px) {
+    .logo {
+      display: none;
+    }
+    
+  }
+  @media screen and (max-width: 950px) {
+    .column {
+      text-align: left;
+    }
+    
+  }
+  @media screen and (max-width: 750px) {
+    .download-apps {
+      
+    /* display: none; */
+    flex-direction: column;
+    width: 100%;
+    }
+    .stay-container {
+      flex-direction: column;
+    }
+    .column {
+        /* flex-direction: row; */
+    }
+    
+  }
+
+
+ 
+
+  .header-container {
+    display: flex;
+    justify-content: space-between;
+
+    padding-bottom: 50px; 
+    padding-left: 10px;
+    padding-right: 10px;
+    padding-top: 50px;
+  }
+  
+  .header-left nav a {
+    color: white;
+    text-decoration: none;
+    /* margin: 0 10px; */
+    font-size: 1.9rem;
+    
+
+  }
+
+ 
+  .header-right p {
+    margin: 0;
+    text-align: left;
+  }
+  .header-left {
+    display: flex;
+    flex-direction: column;
+    
+  }
+  .copy-right {
+    color: #fff;
+    font-size: 1.9rem;
+    padding-top: 20px;
+
+  }
+  .header-right p {
+    font-size: 1.9rem;
+    color: #fff;
+  }
+  .header-center p {
+    font-size: 1.2rem;
+    color: #fff;
+  }
+  nav a:hover {
+    text-decoration: underline;
+  }
