--- a/styles.css
+++ b/styles.css
@@ -531,6 +531,9 @@ transition: color 0.3s ease-in-out;
 }
 
 .scroll-btn button {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     width: 60px;
     height: 60px;
     background-color: white;
