--- a/Yash-Links/food.css
+++ b/Yash-Links/food.css
@@ -480,7 +480,7 @@ html {
 
 .image-and-btn img {
     width: 100%;
-    object-fit: fill;
+    object-fit: cover;
     max-height: 700px;
     border-bottom-right-radius: 10rem;
 }
@@ -555,19 +555,19 @@ html {
     top: 0;
 }
 
-.summer-concerts, .winter-concerts {
+.food {
     display: flex;
     flex-direction: column;
     gap: 2rem;
     padding: 3%;
 }
 
-.summer-concerts > h1, .winter-concerts > h1 {
+.food > h1 {
     font-size: 3.2rem;
     color: #000000b4;
 }
 
-.summer-concerts > p, .winter-concerts > p {
+.food > p {
     font-size: 2.4rem;
     color: #00000094;
 }
@@ -605,86 +605,9 @@ html {
     object-fit: cover;
 }
 
-.showImg-and-btn button {
-    background-color: #fff;
-    border: none;
-    border-radius: 5px;
-    overflow: hidden;
-    width: 55px;
-    height: 55px;
-    box-shadow: 0 0 5px 1px #00000095;
-    cursor: pointer;
-    color: #035e88;
-    font-size: 2rem;
-    position: relative;
-    bottom: 3rem;
-    left: 75%;
-    z-index: 1;
-    transition: color 0.3s ease-in-out;
-}
-
-.showImg-and-btn button:hover {
-    color: #fff;
-}
-
-@media screen and (min-width:768px) {
-    .showImg-and-btn button {
-        left: 90%;
-    }
-}
-
-.showImg-and-btn button::after {
-    content: '';
-    position: absolute;
-    top: 100%;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    z-index: -1;
-    background-color: #035e88;
-    transition: top 0.3s ease-in-out;
-}
-
-.showImg-and-btn button:hover::after {
-    top: 0;
-}
-
 .cards > p {
     font-size: 1.6rem;
     color: #00000094;
-}
-.address {
-    display: flex;
-    flex-direction: column;
-    gap: 1rem;
-}
-
-.address > h3 {
-    font-size: 2.2rem;
-    font-weight: 400;
-    cursor: pointer;
-}
-
-@media screen and (min-width:286px) {
-    .address > h3 {
-        font-size: 2.6rem;
-    }
-}
-
-.address > p {
-    font-size: 1.6rem;
-    color: #00000094;
-}
-
-.date, .place {
-    display: flex;
-    gap: 1rem;
-    font-size: 1.6rem;
-    color: #00000095;
-}
-
-.place > p {
-    color: #035e88;
 }
 
 .Weather {
