--- a/Yash-Links/adventure.css
+++ b/Yash-Links/adventure.css
@@ -375,265 +375,103 @@ html {
     }
 }
 
-.head-text {
-    background-color: #fff;
-    padding: 1.5% 8%;
-    display: flex;
-    flex-direction: column;
-    gap: 2rem;
+.front-img {
     width: 100%;
-    position: relative;
-    z-index: 4;
 }
 
-@media screen and (min-width:768px) {
-    .head-text {
-        width: 60%;
-    }
-}
-
-.head-text h3 {
-    font-size: 2rem;
-    color: #00000094;
-}
-
-.main-head-text {
-    font-size: 4rem;
-    font-weight: 600;
-    line-height: 150%;
-}
-
-.head-time {
-    display: flex;
-    flex-direction: column;
-    gap: 2rem;
-    font-size: 1.4rem;
-    color: #000000ae;
-}
-
-@media screen and (min-width:768px) {
-    .head-time {
-        flex-direction: row;
-    }
-}
-
-.head-last-p {
-    font-size: 2rem;
-    color: #000000ae;
-}
-
-.head-text button {
-    box-shadow: 0px 0px 4px 1px #00000095;
-    background-color: #fff;
-    border: none;
-    border-radius: 5px;
-    width: 55px;
-    height: 55px;
-    font-size: 2rem;
-    color: #035e88;
-    cursor: pointer;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    display: none;
-    overflow: hidden;
-    position: relative;
-    bottom: 1rem;
-    left: 170%;
-    z-index: 1;
-    transition: color 0.3s ease-in-out;
-}
-
-@media screen and (min-width:768px) {
-    .head-text button {
-        display: flex;
-    }
-}
-
-.head-text button:hover {
-    color: #fff;
-}
-
-.head-text button::after {
-    content: '';
-    position: absolute;
-    top: 100%;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    background-color: #035e88;
-    z-index: -1;
-    transition: top 0.3s ease-in-out;
-}
-
-.head-text button:hover::after {
-    top: 0;
-}
-
-.image-and-btn {
+.front-img img{
     width: 100%;
-    display: flex;
-    flex-direction: column;
-    gap: 2rem;
-    position: relative;
+    object-fit: cover;
+    max-height: 600px;
+    border-radius: 0 0 10rem 0;
 }
 
-.image-and-btn img {
+.about-place {
+    padding: 4% 7%;
     width: 100%;
-    object-fit: fill;
-    max-height: 700px;
-    border-bottom-right-radius: 10rem;
-}
-
-.hotel-btn {
-    width: 100%;
-    padding: 1% 3% 1.2%;
-    display: flex;
-    gap: 2%;
-}
-
-.hotel-btn button {
-    background-color: rgb(235, 235, 235);
-    width: 50%;
-    padding: 1.2%;
-    cursor: pointer;
-    border-radius: 1rem;
-    border: none;
-    transition: background-color 0.3s ease-in-out;
-}
-
-.hotel-btn button:hover {
-    background-color: rgb(226, 226, 226);
-}
-
-.hotel-btn button a {
-    text-decoration: none;
-    font-size: 1.6rem;
-    color: #035e88;
-}
-
-.like-btn {
-    width: 55px;
-    height: 55px;
-    background-color: #fff;
-    border: none;
-    border-radius: 5px;
-    box-shadow: 0 0 5px 1px #00000095;
-    cursor: pointer;
-    position: relative;
-    bottom: 13rem;
-    left: 60%;
-    z-index: 1;
-    color: #035e88;
-    font-size: 2rem;
-    transition: color 0.3s ease-in-out;
-}
-
-@media screen and (min-width:768px) {
-    .like-btn {
-        display: none;
-    }
-}
-
-.like-btn:hover {
-    color: #fff;
-}
-
-.like-btn::after {
-    content: '';
-    position: absolute;
-    top: 100%;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    z-index: -1;
-    background-color: #035e88;
-    transition: top 0.3s ease-in-out;
-}
-
-.like-btn:hover::after {
-    top: 0;
-}
-
-.now-open, .coming-soon {
-    display: flex;
-    flex-direction: column;
-    gap: 2rem;
-    padding: 3%;
-}
-
-.now-open > h1, .coming-soon > h1 {
-    font-size: 3.2rem;
-    color: #000000b4;
-}
-
-.now-open > p, .coming-soon > p {
-    font-size: 2.4rem;
-    color: #00000094;
-}
-
-.cards-container {
-    padding: 3% 8%;
-    display: flex;
-    flex-direction: column;
-    gap: 8rem;
-}
-
-.cards-container h1 {
-    font-size: 3rem;
-}
-
-@media screen and (min-width:476px) {
-    .cards-container h1 {
-        font-size: 4.2rem;
-    }
-}
-
-.cards {
     display: flex;
     flex-direction: column;
     gap: 1.5rem;
 }
 
-.showImg-and-btn {
-    width: 100%;
-    position: relative;
+.upper-part {
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
 }
 
-.showImg-and-btn img {
-    width: 100%;
-    object-fit: cover;
+@media screen and (min-width:768px) {
+    .upper-part {
+        flex-direction: row;
+        justify-content: space-between;
+    }
 }
 
-.showImg-and-btn button {
-    background-color: #fff;
+.upper-text {
+    display: flex;
+    flex-direction: column;
+    gap: 0.8rem;
+}
+
+.upper-text h4 {
+    font-size: 1.4rem;
+    color: #00000095;
+}
+
+.upper-text h1 {
+    font-size: 5rem;
+}
+
+.upper-text p {
+    font-size: 2rem;
+    color: #00000095;
+}
+
+.upper-text span {
+    font-size: 1.2rem;
+    font-weight: 900;
+}
+
+.upper-btn {
+    display: flex;
+    gap: 1rem;
+}
+
+.book {
+    width: 120px;
+    height: 55px;
+    background-color: #035e88;
+    color: #fff;
     border: none;
     border-radius: 5px;
-    overflow: hidden;
+    cursor: pointer;
+    transition: background-color 0.3s ease-in-out;
+}
+
+.book:hover {
+    background-color: #034f72;
+}
+
+.like {
     width: 55px;
     height: 55px;
-    box-shadow: 0 0 5px 1px #00000095;
-    cursor: pointer;
-    color: #035e88;
+    background-color: #fff;
     font-size: 2rem;
+    color: #035e88;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    box-shadow: 0 0 5px 1px #000000ae;
     position: relative;
-    bottom: 3rem;
-    left: 75%;
     z-index: 1;
     transition: color 0.3s ease-in-out;
 }
 
-.showImg-and-btn button:hover {
+.like:hover {
     color: #fff;
 }
 
-@media screen and (min-width:768px) {
-    .showImg-and-btn button {
-        left: 90%;
-    }
-}
-
-.showImg-and-btn button::after {
+.like::after {
     content: '';
     position: absolute;
     top: 100%;
@@ -645,52 +483,109 @@ html {
     transition: top 0.3s ease-in-out;
 }
 
-.showImg-and-btn button:hover::after {
+.like:hover::after {
     top: 0;
 }
 
-.cards > p {
-    font-size: 1.6rem;
-    color: #00000094;
-}
-
-.cards > span {
-    font-size: 1.4rem;
-    color: #00000095;
-}
-
-.address {
+.info {
+    padding: 1% 2%;
     display: flex;
     flex-direction: column;
-    gap: 1rem;
+    gap: 2rem;
+    width: 100%;
 }
 
-.address > h3 {
-    font-size: 2.2rem;
-    font-weight: 400;
-    cursor: pointer;
-}
-
-@media screen and (min-width:286px) {
-    .address > h3 {
-        font-size: 2.6rem;
+@media screen and (min-width:768px) {
+    .info {
+        width: 80%;
     }
 }
 
-.address > p {
-    font-size: 1.6rem;
-    color: #00000094;
-}
-
-.place {
-    display: flex;
-    gap: 1rem;
+.info p {
     font-size: 1.6rem;
     color: #00000095;
 }
 
-.place > p {
+.info h1 {
+    font-size: 2.8rem;
+}
+
+.location {
+    width: 100%;
+    padding: 0 4%;
+    display: flex;
+    flex-direction: column;
+    gap: 5rem;
+}
+
+.overview {
+    display: flex;
+    flex-direction: column;
+}
+
+.overview span {
+    text-align: center;
+    width: fit-content;
+    margin: 0 auto;
+    padding: 1.5%;
+    cursor: pointer;
+    font-size: 1.4rem;
     color: #035e88;
+    font-weight: 700;
+    border-bottom: 2px solid #035e88;
+}
+
+.overview hr {
+    border: 0.5px solid #00000018;
+}
+
+.pin {
+    padding: 0 5% 2%;
+    display: flex;
+    flex-direction: column;
+    gap: 5rem;
+}
+
+@media screen and (min-width:990px) {
+    .pin {
+        flex-direction: row-reverse;
+    }
+}
+
+.pin iframe {
+    width: 100%;
+    border-radius: 2rem;
+}
+
+@media screen and (min-width:990px) {
+    .pin iframe {
+        width: 80%;
+    }
+}
+
+.pin-text {
+    display: flex;
+    flex-direction: column;
+    gap: 3rem;
+    font-size: 1.4rem;
+    color: #00000077;
+}
+
+.pin-text p {
+    display: flex;
+    align-items: center;
+    gap: 1rem;
+}
+
+.pin-text p a {
+    font-size: 1.4rem;
+    font-weight: 700;
+    color: #035e88;
+    text-decoration: none;
+}
+
+.pin-text p a:hover {
+    text-decoration: underline;
 }
 
 .Weather {
