--- a/styles.css
+++ b/styles.css
@@ -187,7 +187,13 @@ html::-webkit-scrollbar-thumb {
     display: flex;
     /* align-items: center; */
     font-size: 1.6rem;
+    transition: color 0.2s ease-in-out;
 }
+
+.label_div_leftpart ul li a:hover {
+    color: #035e88;
+}
+
 .img1{
     width: 65px;
 }
@@ -234,10 +240,10 @@ html::-webkit-scrollbar-thumb {
 .main{
     width: 100%;
     height: 600px;
-    background-image: url(assets/asset\ 4.avif);
+    background-image: url(./Yash-Assets/dubai.bg.jpg);
     background-size: cover;
     background-repeat: no-repeat;
-    background-position: center;
+    background-position: top;
     border-bottom-right-radius: 75px;
     position: relative;
     z-index: 1;
